# attiny85-hello-world

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
