[package]
name = "attiny85-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dependencies]
attiny-hal = { git = "https://github.com/rahix/avr-hal", features = ["attiny85"] }
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
